Added more toys